log
Fri 09 Sep 2022 12:23:12 PM UTC: 
 tests:  0|6
total_score: 0/70
b090be2
Fri 09 Sep 2022 12:59:19 PM UTC: 
 hashmap.c | 67 +++++++++++++++++++++++++++++++++++++++++++++++++++++++--------
 1 file changed, 59 insertions(+), 8 deletions(-)
 tests:  0|6
total_score: 0/70
af21c04
Fri 09 Sep 2022 01:00:12 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
72dcc27
Fri 09 Sep 2022 01:29:13 PM UTC: 
 hashmap.c | 77 ++++++++++++++++++++++++++++++++++++++++++---------------------
 1 file changed, 51 insertions(+), 26 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:72:22: error: ‘i’ undeclared (first use in this function)
   72 |      if(map->buckets[i]==NULL){
      |                      ^
hashmap.c:72:22: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c: In function ‘searchMap’:
hashmap.c:102:23: error: ‘capacity’ undeclared (first use in this function)
  102 |   size_t i = hash(key,capacity);
      |                       ^~~~~~~~
Compilation failed
4bd9d4a
Fri 09 Sep 2022 01:29:38 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:72:22: error: ‘i’ undeclared (first use in this function)
   72 |      if(map->buckets[i]==NULL){
      |                      ^
hashmap.c:72:22: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
d489c44
Fri 09 Sep 2022 01:32:11 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
55b1a78
Fri 09 Sep 2022 08:40:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:71:9: error: ‘true’ undeclared (first use in this function)
   71 |   while(true){
      |         ^~~~
hashmap.c:71:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
4ce0bea
Fri 09 Sep 2022 08:40:28 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
98d4206
Fri 09 Sep 2022 08:43:18 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|0
df2afab
Fri 09 Sep 2022 08:43:57 PM UTC: 
 hashmap.c | 14 --------------
 1 file changed, 14 deletions(-)
 tests:  0|0
67b8f98
Fri 09 Sep 2022 08:44:27 PM UTC: 
 hashmap.c | 31 ++++++++++++++-----------------
 1 file changed, 14 insertions(+), 17 deletions(-)
In file included from test.c:4:
hashmap.c:76:1: error: expected identifier or ‘(’ before ‘return’
   76 | return;
      | ^~~~~~
hashmap.c:77:1: error: expected identifier or ‘(’ before ‘}’ token
   77 | }
      | ^
Compilation failed
d1fd460
Fri 09 Sep 2022 08:44:36 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
2b94aeb
